deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: integration-framework-server
spec:
  selector:
    integration: server
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
    - name: grpc
      protocol: TCP
      port: 9000
      targetPort: 9000
