deploy/route-https.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: integration-framework-server
  namespace: test-if
  labels: {}
spec:
  to:
    kind: Service
    name: integration-framework-server
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    destinationCACertificate: ''
  path: /
  port:
    targetPort: http
